--- a/theme.css
+++ b/theme.css
@@ -1,67 +1,67 @@
 .theme-light {
-	--background-primary-l: 100%;
-	--code-background-l: 96%;
-	--divider-color-l: 96%;
-	--background-modifier-hover-l: 96%;
-	--text-normal-l: 10%;
-	--text-muted-l: 30%;
-	--text-faint-l: 60%;
-	--text-heading-l: 50%;
-	--nav-item-color-l: 40%;
+  --background-primary-l: 100%;
+  --code-background-l: 96%;
+  --divider-color-l: 96%;
+  --background-modifier-hover-l: 96%;
+  --text-normal-l: 10%;
+  --text-muted-l: 30%;
+  --text-faint-l: 60%;
+  --text-heading-l: 50%;
+  --nav-item-color-l: 40%;
 }
 
 .theme-dark {
-	--background-primary-l: 12%;
-	--code-background-l: 16%;
-	--divider-color-l: 16%;
-	--background-modifier-hover-l: 16%;
-	--text-normal-l: 90%;
-	--text-muted-l: 70%;
-	--text-faint-l: 50%;
-	--text-heading-l: 70%;
-	--nav-item-color-l: 70%;
+  --background-primary-l: 12%;
+  --code-background-l: 16%;
+  --divider-color-l: 16%;
+  --background-modifier-hover-l: 16%;
+  --text-normal-l: 90%;
+  --text-muted-l: 70%;
+  --text-faint-l: 50%;
+  --text-heading-l: 70%;
+  --nav-item-color-l: 70%;
 }
 
 body {
-	--hue: 210;
-	--sat: 20%;
-	--background-primary: hsl(
-		var(--hue),
-		var(--sat),
-		var(--background-primary-l)
-	);
-	--code-background: hsl(var(--hue), var(--sat), var(--code-background-l));
-	--divider-color: hsl(var(--hue), var(--sat), var(--divider-color-l));
-	--background-modifier-hover: hsl(
-		var(--hue),
-		var(--sat),
-		var(--background-modifier-hover-l)
-	);
-	--text-normal: hsl(var(--hue), var(--sat), var(--text-normal-l));
-	--text-faint: hsl(var(--hue), var(--sat), var(--text-faint-l));
-	--text-muted: hsl(var(--hue), var(--sat), var(--text-faint-l));
-	--text-heading: hsl(var(--hue), var(--sat), var(--text-heading-l));
-	--nav-item-color: hsl(var(--hue), var(--sat), var(--nav-item-color-l));
+  --hue: 210;
+  --sat: 20%;
+  --background-primary: hsl(
+    var(--hue),
+    var(--sat),
+    var(--background-primary-l)
+  );
+  --code-background: hsl(var(--hue), var(--sat), var(--code-background-l));
+  --divider-color: hsl(var(--hue), var(--sat), var(--divider-color-l));
+  --background-modifier-hover: hsl(
+    var(--hue),
+    var(--sat),
+    var(--background-modifier-hover-l)
+  );
+  --text-normal: hsl(var(--hue), var(--sat), var(--text-normal-l));
+  --text-faint: hsl(var(--hue), var(--sat), var(--text-faint-l));
+  --text-muted: hsl(var(--hue), var(--sat), var(--text-faint-l));
+  --text-heading: hsl(var(--hue), var(--sat), var(--text-heading-l));
+  --nav-item-color: hsl(var(--hue), var(--sat), var(--nav-item-color-l));
 
-	--background-secondary: transparent;
-	--titlebar-background: transparent;
-	--titlebar-background-focused: transparent;
-	--nav-item-padding: var(--size-4-2);
+  --background-secondary: transparent;
+  --titlebar-background: transparent;
+  --titlebar-background-focused: transparent;
+  --nav-item-padding: var(--size-4-2);
 
-	--h1-color: var(--text-heading);
-	--h2-color: var(--text-heading);
-	--h3-color: var(--text-heading);
-	--h4-color: var(--text-heading);
-	--h5-color: var(--text-heading);
-	--h6-color: var(--text-heading);
+  --h1-color: var(--text-heading);
+  --h2-color: var(--text-heading);
+  --h3-color: var(--text-heading);
+  --h4-color: var(--text-heading);
+  --h5-color: var(--text-heading);
+  --h6-color: var(--text-heading);
 }
 
 .mod-macos {
-	--frame-left-space: 75px;
+  --frame-left-space: 75px;
 }
 
 .workspace-tab-header-container {
-	border-bottom: none;
+  border-bottom: none;
 }
 
 .mod-right-split .workspace-tab-header-container,
@@ -73,34 +73,42 @@ body {
 .view-actions,
 .view-header-nav-buttons,
 .workspace-ribbon {
-	display: none;
+  display: none;
+}
+
+.nav-files-container {
+  padding-inline-start: var(--size-4-6);
+}
+
+.nav-folder.mod-root .nav-folder > .nav-folder-children {
+  border-left: none;
 }
 
 .mod-root {
-	padding-top: var(--size-4-2);
+  padding-top: var(--size-4-2);
 }
 
 .search-result-file-title {
-	padding-block: var(--size-4-3);
+  padding-block: var(--size-4-3);
 }
 
 .workspace-split.mod-right-split {
-	padding: 0;
+  padding: 0;
 }
 
 .tag-container {
-	padding: var(--size-4-3) var(--size-4-4) 0;
+  padding: var(--size-4-3) var(--size-4-4) 0;
 }
 
 .tag-pane-tag-self::before {
-	color: var(--text-faint);
-	content: "# ";
+  color: var(--text-faint);
+  content: "# ";
 }
 
 .cm-hmd-frontmatter {
-	color: var(--text-faint) !important;
+  color: var(--text-faint) !important;
 }
 
 .is-focused .workspace-leaf.mod-active .view-header-title {
-	color: var(--text-muted);
+  color: var(--text-muted);
 }
